force-app/main/default/objects/Project__c/fields/ParentProjectID__c.field-meta.xml
<CustomField>
    <fullName>ParentProjectID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A search field that indicates the ID number of the parent project of the Project.</description>
    <inlineHelpText>Select the ID number of the parent project of the project.</inlineHelpText>
    <label>Parent Project ID</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>