force-app/main/default/objects/Project__c/fields/PendingBulkImport__c.field-meta.xml
<CustomField>
    <fullName>PendingBulkImport__c</fullName>
    <description>This field will indicate if any import job is pending.</description>
    <label>Pending Bulk Import</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>