force-app/main/default/objects/Project__c/fields/PendingJobImportRequest__c.field-meta.xml
<CustomField>
    <fullName>PendingJobImportRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Job Import Request</label>
    <type>Checkbox</type>
</CustomField>