force-app/main/default/objects/Project__c/fields/PercentCompleted__c.field-meta.xml
<CustomField>
    <fullName>PercentCompleted__c</fullName>
    <formula>NumberofJobsCompleted__c /  NumberofJobsNotCanceled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>