force-app/main/default/objects/Project__c/fields/PercentExecuted__c.field-meta.xml
<CustomField>
    <fullName>PercentExecuted__c</fullName>
    <formula>NumberofJobsExecuted__c /  NumberofJobsNotCanceled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executed %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>