force-app/main/default/objects/Project__c/fields/PercentScheduled__c.field-meta.xml
<CustomField>
    <fullName>PercentScheduled__c</fullName>
    <formula>NumberofJobsScheduled__c /  NumberofJobsNotCanceled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>