force-app/main/default/objects/Project__c/fields/PrimaryAccount__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PrimaryAccount</label>
    <referenceTo>ProjectAccount__c</referenceTo>
    <relationshipLabel>ProjectAccounts</relationshipLabel>
    <relationshipName>ProjectAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>