force-app/main/default/objects/Project__c/fields/ProjectAccountsCount__c.field-meta.xml
<CustomField>
    <fullName>ProjectAccountsCount__c</fullName>
    <description>Number of Project Accounts</description>
    <inlineHelpText>Number of Project Accounts</inlineHelpText>
    <label>Project Accounts Count</label>
    <summaryForeignKey>ProjectAccount__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>