force-app/main/default/objects/Project__c/fields/ProjectBuilderId__c.field-meta.xml
<CustomField>
    <fullName>ProjectBuilderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Builder</description>
    <inlineHelpText>specify the user who is in charge of the project&#39;s definition.</inlineHelpText>
    <label>OwnerBuilder</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <filterItems>
            <field>$Source.Status__c</field>
            <operation>notEqual</operation>
            <value>Planning</value>
        </filterItems>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectBuilder</relationshipName>
    <type>Lookup</type>
</CustomField>