force-app/main/default/objects/Project__c/fields/ProjectBuilderName__c.field-meta.xml
<CustomField>
    <fullName>ProjectBuilderName__c</fullName>
    <description>Project  Builder Name</description>
    <formula>ProjectBuilderId__r.FirstName + &#39; &#39; + ProjectBuilderId__r.LastName</formula>
    <inlineHelpText>the user who is in charge of the project&#39;s definition</inlineHelpText>
    <label>Builder Name</label>
    <type>Text</type>
</CustomField>