force-app/main/default/objects/Project__c/fields/ProjectCancelLeadTime__c.field-meta.xml
<CustomField>
    <fullName>ProjectCancelLeadTime__c</fullName>
    <description>A field that indicates the lead time to cancel the Project.</description>
    <formula>Retailer__r.JobCancelLeadTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The lead time to cancel the project.</inlineHelpText>
    <label>Project Cancel Lead Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>