force-app/main/default/objects/Project__c/fields/ProjectCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectCloseDate__c</fullName>
    <description>A field that indicates the close date and time for the Project.</description>
    <formula>if(ISPICKVAL(Status__c,&#39;Canceled&#39;), NULL ,EndDate__c+ProjectGracePeriodDuration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The close date and time for the project.</inlineHelpText>
    <label>Project Close Date</label>
    <type>Date</type>
</CustomField>