force-app/main/default/objects/Project__c/fields/ProjectCost__c.field-meta.xml
<CustomField>
    <fullName>ProjectCost__c</fullName>
    <description>A field that indicates the cost of the Project.</description>
    <inlineHelpText>The cost of the project.</inlineHelpText>
    <label>Project Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>