force-app/main/default/objects/Project__c/fields/ProjectCycle__c.field-meta.xml
<CustomField>
    <fullName>ProjectCycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A search field that indicates the cycle of the Project.</description>
    <inlineHelpText>Enter the cycle of the project.</inlineHelpText>
    <label>Project Cycle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RetailerAccount__c</field>
            <operation>equals</operation>
            <valueField>Cycle__c.RetailerAccount__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>