force-app/main/default/objects/Project__c/fields/ProjectDescription__c.field-meta.xml
<CustomField>
    <fullName>ProjectDescription__c</fullName>
    <description>An entry field that indicates the description of the Project.</description>
    <inlineHelpText>Enter the description of the project.</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>