force-app/main/default/objects/Project__c/fields/ProjectGracePeriodDuration__c.field-meta.xml
<CustomField>
    <fullName>ProjectGracePeriodDuration__c</fullName>
    <description>A field that indicates the duration of the grace period for the Project.</description>
    <label>Project Grace Period Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>