force-app/main/default/objects/Project__c/fields/ProjectInstructions__c.field-meta.xml
<CustomField>
    <fullName>ProjectInstructions__c</fullName>
    <inlineHelpText>Detail scope of work for the entire project</inlineHelpText>
    <label>Project Instructions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>