force-app/main/default/objects/Project__c/fields/ProjectLaunchDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectLaunchDate__c</fullName>
    <description>A field that indicates the launch date for the Project</description>
    <inlineHelpText>The date the project becomes visible on execution platforms and fulfillment entities.</inlineHelpText>
    <label>Project Launch Date</label>
    <type>Date</type>
</CustomField>