force-app/main/default/objects/Project__c/fields/ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>ProjectNumber__c</fullName>
    <displayFormat>{YY}{MM}{DD}{000000}</displayFormat>
    <inlineHelpText>this is help text in design</inlineHelpText>
    <label>Project Number</label>
    <type>AutoNumber</type>
</CustomField>