force-app/main/default/objects/Project__c/fields/ProjectOrigin__c.field-meta.xml
<CustomField>
    <fullName>ProjectOrigin__c</fullName>
    <label>Project Origin System</label>
    <length>25</length>
    <type>Text</type>
</CustomField>