force-app/main/default/objects/Project__c/fields/ProjectPrice__c.field-meta.xml
<CustomField>
    <fullName>ProjectPrice__c</fullName>
    <label>Project Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>