force-app/main/default/objects/Project__c/fields/ProjectRetailerName__c.field-meta.xml
<CustomField>
    <fullName>ProjectRetailerName__c</fullName>
    <formula>Retailer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Retailer Name</label>
    <type>Text</type>
</CustomField>