force-app/main/default/objects/Project__c/fields/ProjectRetailerONEHUBID__c.field-meta.xml
<CustomField>
    <fullName>ProjectRetailerONEHUBID__c</fullName>
    <label>Project Retailer One Hub ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>