force-app/main/default/objects/Project__c/fields/ProjectScheduleOption__c.field-meta.xml
<CustomField>
    <fullName>ProjectScheduleOption__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Determines soft-dated or hard-dated scheduling of work</inlineHelpText>
    <label>Project Schedule Option</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ScheduleOption__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ScheduleOption__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>