force-app/main/default/objects/Project__c/fields/ProjectScheduleOptionCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectScheduleOptionCode__c</fullName>
    <description>Code that specifies the Schedule Option for a Project. Reference this field within APEX where functionality is determined based upon Schedule Option, such as who sets the Schedule Date for a specific Job. The Code should not be visible in page layouts for Users. Use the Project Schedule Option Name within Reporting and the Project Schedule Option within page layouts.</description>
    <formula>ProjectScheduleOption__r.Code__c</formula>
    <label>Project Schedule Option Code</label>
    <type>Text</type>
</CustomField>