force-app/main/default/objects/Project__c/fields/ProjectScheduleOptionName__c.field-meta.xml
<CustomField>
    <fullName>ProjectScheduleOptionName__c</fullName>
    <formula>ProjectScheduleOption__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Schedule Option Name</label>
    <type>Text</type>
</CustomField>