force-app/main/default/objects/Project__c/fields/ProjectSeller__c.field-meta.xml
<CustomField>
    <fullName>ProjectSeller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person that sold the Opportunity (if available)</inlineHelpText>
    <label>Project Seller</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <filterItems>
            <field>$Source.Status__c</field>
            <operation>notEqual</operation>
            <value>Planning</value>
        </filterItems>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Seller</relationshipName>
    <type>Lookup</type>
</CustomField>