force-app/main/default/objects/Project__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Type</label>
    <referenceTo>ProjectType__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>