force-app/main/default/objects/Project__c/fields/ProjectTypeName__c.field-meta.xml
<CustomField>
    <fullName>ProjectTypeName__c</fullName>
    <formula>ProjectType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Type Name</label>
    <type>Text</type>
</CustomField>