force-app/main/default/objects/Project__c/fields/ProjectWindow__c.field-meta.xml
<CustomField>
    <fullName>ProjectWindow__c</fullName>
    <formula>TEXT(MONTH(StartDate__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(StartDate__c)) &amp; &quot;/&quot; &amp; TEXT(Year(StartDate__c)) &amp; &quot; - &quot; &amp; TEXT(MONTH(EndDate__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(EndDate__c)) &amp; &quot;/&quot; &amp; TEXT(Year(EndDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Window</label>
    <type>Text</type>
</CustomField>