force-app/main/default/objects/Project__c/fields/RejectReason__c.field-meta.xml
<CustomField>
    <fullName>RejectReason__c</fullName>
    <label>Reject Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>