force-app/main/default/objects/Project__c/fields/ReportedTotalTime__c.field-meta.xml
<CustomField>
    <fullName>ReportedTotalTime__c</fullName>
    <label>Total Time Reported</label>
    <summarizedField>ProjectService__c.ReportedTotalTime__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>