force-app/main/default/objects/Project__c/fields/RequestedLocationsCount__c.field-meta.xml
<CustomField>
    <fullName>RequestedLocationsCount__c</fullName>
    <inlineHelpText>Number of locations requested for approval for the project, this number should match the # of Budgeted Locations in most cases.</inlineHelpText>
    <label>Requested Locations Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>