force-app/main/default/objects/Project__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer</label>
    <referenceTo>Retailer__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>