force-app/main/default/objects/Project__c/fields/RetailerAccount__c.field-meta.xml
<CustomField>
    <fullName>RetailerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Inherited from Project Type, but can be edited. Retailer Account will determine the Category selections at the Project Service.</inlineHelpText>
    <label>Retailer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.OneHubAccountType__c</field>
            <operation>equals</operation>
            <value>Retailer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>