force-app/main/default/objects/Project__c/fields/SchedulingOption__c.field-meta.xml
<CustomField>
    <fullName>SchedulingOption__c</fullName>
    <label>Project Scheduling Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ProjectBuilder</fullName>
                <label>Project Builder</label>
            </value>
            <value>
                <fullName>ExecutionCompanySupervisoronly</fullName>
                <label>Execution Company, Supervisor only</label>
            </value>
            <value>
                <fullName>ExecutionCompanySupervisororRep</fullName>
                <default>true</default>
                <label>Execution Company, Supervisor or Rep</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>