force-app/main/default/objects/Project__c/fields/ServiceCount__c.field-meta.xml
<CustomField>
    <fullName>ServiceCount__c</fullName>
    <label>Service Count</label>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>