force-app/main/default/objects/Project__c/fields/ServicModel__c.field-meta.xml
<CustomField>
    <fullName>ServicModel__c</fullName>
    <formula>TEXT(ProjectType__r.ServiceModel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Model</label>
    <type>Text</type>
</CustomField>