force-app/main/default/objects/Project__c/fields/SkipValidationRules__c.field-meta.xml
<CustomField>
    <fullName>SkipValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SkipValidationRules</label>
    <type>Checkbox</type>
</CustomField>