force-app/main/default/objects/Project__c/fields/SplitType__c.field-meta.xml
<CustomField>
    <fullName>SplitType__c</fullName>
    <description>A picklist that indicates if the project is to be a solo or split across multiple accounts.</description>
    <inlineHelpText>Select the split type for the project.</inlineHelpText>
    <label>Project Split Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solo</fullName>
            </value>
            <value>
                <fullName>Percentage (%)</fullName>
            </value>
            <value>
                <fullName>Amount ($)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>