force-app/main/default/objects/Project__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>An entry field that indicates the start date of the Project.</description>
    <inlineHelpText>The date available to start execution</inlineHelpText>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>