force-app/main/default/objects/Project__c/fields/StatusComments__c.field-meta.xml
<CustomField>
    <fullName>StatusComments__c</fullName>
    <description>Used to store Rejected or Canceled reasons</description>
    <label>Status Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>