force-app/main/default/objects/Project__c/fields/StatusDisplay__c.field-meta.xml
<CustomField>
    <fullName>StatusDisplay__c</fullName>
    <formula>IF(TEXT(Status__c)== null, &#39;Planning&#39;, TEXT(Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Display</label>
    <type>Text</type>
</CustomField>