force-app/main/default/objects/Project__c/fields/StoreCallTimeLimit__c.field-meta.xml
<CustomField>
    <fullName>StoreCallTimeLimit__c</fullName>
    <description>Time in minutes that can be set to override the Total Estimated Minutes.</description>
    <inlineHelpText>Optionally set a time limit to override Total Estimated Minutes</inlineHelpText>
    <label>Store Call Time Limit (minutes)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>