force-app/main/default/objects/Project__c/fields/TotalAccountSplit__c.field-meta.xml
<CustomField>
    <fullName>TotalAccountSplit__c</fullName>
    <label>TotalAccountSplit</label>
    <summarizedField>ProjectAccount__c.SplitValue__c</summarizedField>
    <summaryForeignKey>ProjectAccount__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>