force-app/main/default/objects/Project__c/fields/TotalEstimatedMinutes__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimatedMinutes__c</fullName>
    <description>Sum of estimated minutes across all services.</description>
    <inlineHelpText>Sum of Project Service minutes per rep</inlineHelpText>
    <label>Total Estimated Minutes</label>
    <summarizedField>ProjectService__c.EstimatedMinutes__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>