force-app/main/default/objects/Project__c/fields/TotalTimeReported__c.field-meta.xml
<CustomField>
    <fullName>TotalTimeReported__c</fullName>
    <label>Depracated - Total Time Reported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>