force-app/main/default/objects/Project__c/fields/UpdateJobsFlag__c.field-meta.xml
<CustomField>
    <fullName>UpdateJobsFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To show &quot;Create Jobs&quot; button in scheduled state when services are modified.</description>
    <label>Update Jobs Flag</label>
    <type>Checkbox</type>
</CustomField>