force-app/main/default/objects/Project__c/fields/UpdateSequence__c.field-meta.xml
<CustomField>
    <fullName>UpdateSequence__c</fullName>
    <label>Update Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>