force-app/main/default/objects/Project__c/recordTypes/Canceled.recordType-meta.xml
<RecordType>
    <fullName>Canceled</fullName>
    <active>true</active>
    <label>Canceled</label>
</RecordType>