force-app/main/default/objects/Project__c/recordTypes/Closed.recordType-meta.xml
<RecordType>
    <fullName>Closed</fullName>
    <active>true</active>
    <label>Closed</label>
</RecordType>