force-app/main/default/objects/Project__c/recordTypes/Edit_Booked_Project_Record.recordType-meta.xml
<RecordType>
    <fullName>Edit_Booked_Project_Record</fullName>
    <active>true</active>
    <label>Edit Booked Project Record</label>
</RecordType>