force-app/main/default/objects/Project__c/recordTypes/Ended.recordType-meta.xml
<RecordType>
    <fullName>Ended</fullName>
    <active>true</active>
    <label>Ended</label>
</RecordType>