force-app/main/default/objects/Project__c/recordTypes/Launched.recordType-meta.xml
<RecordType>
    <fullName>Launched</fullName>
    <active>true</active>
    <label>Launched</label>
</RecordType>