force-app/main/default/objects/Project__c/validationRules/Cannot_Change_Project_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Project_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(ProjectType__c)</errorConditionFormula>
    <errorMessage>Project Type Cannot be Changed</errorMessage>
</ValidationRule>