force-app/main/default/objects/Project__c/validationRules/Disallow_zero_Number_Of_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_zero_Number_Of_Days</fullName>
    <active>true</active>
    <description>Do not allow a non zero number of days</description>
    <errorConditionFormula>NumberOfDays__c &lt;= 0</errorConditionFormula>
    <errorMessage>Number of Days has to be a number &gt; 0</errorMessage>
</ValidationRule>