force-app/main/default/objects/Project__c/validationRules/End_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(EndDate__c)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date is required.</errorMessage>
</ValidationRule>