force-app/main/default/objects/Project__c/validationRules/MaximumOf10ThousandBudgetedLocations.validationRule-meta.xml
<ValidationRule>
    <fullName>MaximumOf10ThousandBudgetedLocations</fullName>
    <active>true</active>
    <description>A project can not have more than 9,500 Budgeted locations</description>
    <errorConditionFormula>BudgetedLocationsCount__c &gt;9500</errorConditionFormula>
    <errorMessage>A project can not have more than 9,500 Budgeted locations</errorMessage>
</ValidationRule>