force-app/main/default/objects/Project__c/validationRules/MaximumOf10ThousandLocations.validationRule-meta.xml
<ValidationRule>
    <fullName>MaximumOf10ThousandLocations</fullName>
    <active>true</active>
    <description>A project can not have more than 9,500 locations</description>
    <errorConditionFormula>LocationTotalCount__c &gt; 9500</errorConditionFormula>
    <errorMessage>A project can not have more than 9,500 locations</errorMessage>
</ValidationRule>