force-app/main/default/objects/Project__c/validationRules/Must_be_grater_then_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_be_grater_then_0</fullName>
    <active>true</active>
    <errorConditionFormula>BudgetedLocationsCount__c &lt;= 0</errorConditionFormula>
    <errorMessage># of Budgeted Locations must be greater than 0</errorMessage>
</ValidationRule>