force-app/main/default/objects/Project__c/validationRules/Only1AccountForSplitTypeSolo.validationRule-meta.xml
<ValidationRule>
    <fullName>Only1AccountForSplitTypeSolo</fullName>
    <active>true</active>
    <description>Only allow 1 project account for split type of solo</description>
    <errorConditionFormula>ProjectAccountsCount__c &gt; 1 &amp;&amp; TEXT(SplitType__c) = &quot;Solo&quot; &amp;&amp; ISCHANGED(SplitType__c)</errorConditionFormula>
    <errorMessage>Project split type cannot be set to &#39;Solo&#39; until one or more accounts is deleted from the project.</errorMessage>
</ValidationRule>