force-app/main/default/objects/Project__c/validationRules/Prevent_Scheduling_Option_chnage.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Scheduling_Option_chnage</fullName>
    <active>true</active>
    <description>Prevent scheduling option change for projects created from opportunity</description>
    <errorConditionFormula>OR(NOT(ISPICKVAL(Status__c,&quot;Planning&quot;))&amp;&amp; ISCHANGED( ProjectScheduleOption__c), (ISPICKVAL(Status__c,&#39;Planning&#39;) &amp;&amp; LocationTotalCount__c &gt; 0 &amp;&amp; ISCHANGED( ProjectScheduleOption__c) &amp;&amp; UPPER(ProjectScheduleOptionCode__c) == &#39;EC&#39; ))</errorConditionFormula>
    <errorDisplayField>ProjectScheduleOption__c</errorDisplayField>
    <errorMessage>Scheduling option can only be changed when the project is in Planning status. Also, when changing to EC, please make sure there are no locations. If there are locations please remove them and try again.</errorMessage>
</ValidationRule>