force-app/main/default/objects/Project__c/validationRules/Project_end_date_not_less_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_end_date_not_less_than_today</fullName>
    <active>true</active>
    <errorConditionFormula>AND(EndDate__c &lt; today(),OR(ISNEW(),ISCHANGED(EndDate__c)))</errorConditionFormula>
    <errorMessage>Start date cannot come after the end date</errorMessage>
</ValidationRule>