force-app/main/default/objects/Project__c/validationRules/Project_Grace_Period_Negative_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Grace_Period_Negative_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ProjectGracePeriodDuration__c &lt; 0</errorConditionFormula>
    <errorMessage>Project Grace Period cannot be less than 0</errorMessage>
</ValidationRule>